# martingale-sinkhorn

./: .gitignore  README.md  pyproject.toml
examples/: gaussian_mixture_refinement.ckpt  gaussian_mixture_refinement.py  moons_to_8_gaussians.ckpt  moons_to_8_gaussians.py  uniform_disk_to_uniform_circle.ckpt  uniform_disk_to_uniform_circle.py
src/msinkhorn/: __init__.py  _utils.py  solver.py  viz2d.py
